# rivers

./: .env.example  .gitignore  README.md  pyproject.toml
rivers_engineer/: __init__.py  analyzer.py  archaeologist.py  cli.py  collector.py  critic.py  page_generator.py  prompts.py  provider.py  reporter.py  ui_server.py
rivers_engineer/ui/: index.html
